# hello-drf

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/courses/: admin.py  models.py  serializers.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py
apps/students/: admin.py  models.py  serializers.py  urls.py  views.py
apps/students/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_customuser_student.py
config/: settings.py  urls.py
